Import BS + Add Logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Squidwards Tiki Land</title>
 </head>
 <body>
-    
+    <header> 
+        <a href="index.html">
+            <img src="imgs/logo-transparent-png.png" alt="" style="width: 13rem;">
+        </a>
+    </header>
 </body>
 </html>
